--- a/keyutils.yaml
+++ b/keyutils.yaml
@@ -7,6 +7,7 @@ package:
     - license: GPL-2.0-or-later OR LGPL-2.0-or-later
   dependencies:
     runtime:
+      - merged-bin
       - merged-sbin
       - wolfi-baselayout
 
@@ -62,6 +63,7 @@ subpackages:
     dependencies:
       runtime:
         - keyutils-libs
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
     description: keyutils dev
@@ -78,6 +80,7 @@ subpackages:
         - uses: test/docs
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
@@ -94,6 +97,7 @@ subpackages:
             packages: keyutils-libs
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
