--- a/shadow.yaml
+++ b/shadow.yaml
@@ -2,12 +2,13 @@
 package:
   name: shadow
   version: "4.17.3"
-  epoch: 20
+  epoch: 30
   description: PAM login and passwd utilities
   copyright:
     - license: BSD-3-Clause
   dependencies:
     runtime:
+      - merged-bin
       - merged-sbin
       - wolfi-baselayout
 
@@ -102,6 +103,7 @@ subpackages:
       - uses: split/dev
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - shadow
         - wolfi-baselayout
@@ -129,6 +131,7 @@ subpackages:
             lastlog --help
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
@@ -141,6 +144,7 @@ subpackages:
         - uses: test/docs
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
@@ -161,6 +165,7 @@ subpackages:
             pwunconv --help
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
@@ -179,6 +184,7 @@ subpackages:
     description: Utilities for using subordinate UIDs and GIDs
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
