--- a/bash.yaml
+++ b/bash.yaml
@@ -1,10 +1,14 @@
 package:
   name: bash
   version: 5.2.37
-  epoch: 2
+  epoch: 30
   description: "GNU bourne again shell"
   copyright:
     - license: GPL-3.0-or-later
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -47,6 +51,8 @@ subpackages:
       provider-priority: 60
       runtime:
         - bash
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
@@ -69,6 +75,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: "bash-dev"
     description: "bash development headers"
@@ -83,6 +93,10 @@ subpackages:
             bashbug --version
             bashbug --help
         - uses: test/pkgconf
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
   - name: "bash-builtins"
     description: "bash loadable builtins"
@@ -90,6 +104,10 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/lib
           mv "${{targets.destdir}}/usr/lib/bash" ${{targets.subpkgdir}}/usr/lib/
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
 update:
   enabled: true
