--- a/buildah.yaml
+++ b/buildah.yaml
@@ -2,9 +2,13 @@ package:
   name: buildah
   version: "1.39.2"
   description: "A tool that facilitates building OCI images"
-  epoch: 0
+  epoch: 30
   copyright:
     - license: Apache-2.0
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
