--- a/calico-3.29.yaml
+++ b/calico-3.29.yaml
@@ -1,13 +1,16 @@
 package:
   name: calico-3.29
   version: "3.29.2"
-  epoch: 1
+  epoch: 30
   description: "Cloud native networking and network security"
   copyright:
     - license: Apache-2.0
   dependencies:
     provides:
       - calico=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
   resources:
     cpu: 4
     memory: 12Gi
@@ -142,26 +145,28 @@ subpackages:
       provides:
         - calico-node=${{package.full-version}}
       runtime:
-        - runit
         - bash # required for logging functionality to work since `start_runit` logging script uses #!/bin/bash
-        - iptables
+        - conntrack-tools
+        - glibc
         - ip6tables
+        - iproute2
         - ipset
-        - libpcap
-        - libelf
-        - zlib
+        - iptables
         - libbpf
         # listed in Dockerfile, but not sure if they're build dependencies (for iptables) or runtime
+        - libelf
         - libmnl
-        - libnfnetlink
         - libnetfilter_conntrack
-        - iproute2
-        - procps
-        - conntrack-tools
         - libnetfilter_cthelper
         - libnetfilter_cttimeout
         - libnetfilter_queue
-        - glibc
+        - libnfnetlink
+        - libpcap
+        - merged-bin
+        - procps
+        - runit
+        - wolfi-baselayout
+        - zlib
     pipeline:
       - assertions:
           required-steps: 2
@@ -240,11 +245,13 @@ subpackages:
       provides:
         - calico-felix=${{package.full-version}}
       runtime:
-        - iproute2
-        - libelf
-        - zlib
-        - libbpf
         - glibc
+        - iproute2
+        - libbpf
+        - libelf
+        - merged-bin
+        - wolfi-baselayout
+        - zlib
     pipeline:
       - working-directory: felix
       - runs: |
@@ -315,12 +322,14 @@ subpackages:
       provides:
         - calico-cni=${{package.full-version}}
       runtime:
-        - flannel-cni-plugin
-        - cni-plugins-loopback
+        - cni-plugins-bandwidth
         - cni-plugins-host-local
+        - cni-plugins-loopback
         - cni-plugins-portmap
         - cni-plugins-tuning
-        - cni-plugins-bandwidth
+        - flannel-cni-plugin
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       # NOTE: cni is a multicall binary: https://github.com/projectcalico/calico/blob/master/cni-plugin/cmd/calico/calico.go
       # install is not a part of that multicall binary anymore (as of calico 3.27.1)
@@ -356,12 +365,14 @@ subpackages:
         - calico-cni-compat=${{package.full-version}}
       runtime:
         - calico-cni
-        - flannel-cni-plugin-compat
-        - cni-plugins-loopback-compat
+        - cni-plugins-bandwidth-compat
         - cni-plugins-host-local-compat
+        - cni-plugins-loopback-compat
         - cni-plugins-portmap-compat
         - cni-plugins-tuning-compat
-        - cni-plugins-bandwidth-compat
+        - flannel-cni-plugin-compat
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/opt/cni/bin
@@ -375,6 +386,8 @@ subpackages:
         - calico-apiserver=${{package.full-version}}
       runtime:
         - glibc
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/build
         with:
@@ -388,6 +401,9 @@ subpackages:
     dependencies:
       provides:
         - calico-apiserver-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/code
@@ -399,6 +415,8 @@ subpackages:
         - calico-key-cert-provisioner=${{package.full-version}}
       runtime:
         - glibc
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/build
         with:
@@ -412,6 +430,8 @@ subpackages:
         - calico-app-policy=${{package.full-version}}
       runtime:
         - glibc
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/build
         with:
@@ -431,6 +451,8 @@ subpackages:
         - calico-kube-controllers=${{package.full-version}}
       runtime:
         - glibc-dev
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/build
         with:
@@ -452,6 +474,8 @@ subpackages:
         - calico-pod2daemon=${{package.full-version}}
       runtime:
         - glibc
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/build
         with:
@@ -476,6 +500,9 @@ subpackages:
     dependencies:
       provides:
         - calico-pod2daemon-flexvol-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/local/bin
@@ -486,6 +513,9 @@ subpackages:
     dependencies:
       provides:
         - calicoctl=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/build
         with:
@@ -501,6 +531,8 @@ subpackages:
         - calico-typhad=${{package.full-version}}
       runtime:
         - glibc
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       # TODO: I'm not sure yet if this actually needs CGO, or is just enabled upstream because of go-fips
       - runs: |
@@ -529,6 +561,8 @@ subpackages:
         - calico-typha-client=${{package.full-version}}
       runtime:
         - glibc
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       # TODO: I'm not sure yet if this actually needs CGO, or is just enabled upstream because of go-fips
       - runs: |
