--- a/fuse2.yaml
+++ b/fuse2.yaml
@@ -1,12 +1,13 @@
 package:
   name: fuse2
   version: 2.9.9
-  epoch: 20
+  epoch: 30
   description: A library that makes it possible to implement a filesystem in a userspace program.
   copyright:
     - license: GPL-2.0-only AND LGPL-2.1-only
   dependencies:
     runtime:
+      - merged-bin
       - merged-sbin
       - wolfi-baselayout
 
@@ -66,6 +67,7 @@ subpackages:
     description: fuse static
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
@@ -75,6 +77,7 @@ subpackages:
     dependencies:
       runtime:
         - fuse-common
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
     description: fuse dev
@@ -91,6 +94,7 @@ subpackages:
         - uses: test/docs
     dependencies:
       runtime:
+        - merged-bin
         - merged-sbin
         - wolfi-baselayout
 
