--- a/iputils.yaml
+++ b/iputils.yaml
@@ -1,10 +1,14 @@
 package:
   name: iputils
   version: "20240905"
-  epoch: 1
+  epoch: 30
   description: IP Configuration Utilities
   copyright:
     - license: BSD-3-Clause AND GPL-2.0-or-later
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
