--- a/k3s.yaml
+++ b/k3s.yaml
@@ -1,7 +1,7 @@
 package:
   name: k3s
   version: "1.32.2.1"
-  epoch: 0
+  epoch: 30
   description:
   copyright:
     - license: Apache-2.0
@@ -18,6 +18,7 @@ package:
       - ip6tables # this pulls in iptables as well
       - kmod
       - libseccomp
+      - merged-bin
       - mount
       - runc
       - umount
@@ -26,6 +27,7 @@ package:
       # - crictl
       # - containerd
       # - kubectl
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -110,11 +112,13 @@ subpackages:
         - conntrack-tools
         - containerd-shim-runc-v2
         - ip6tables
-        - libseccomp
-        - runc
-        - mount
-        - umount
         - kmod
+        - libseccomp
+        - merged-bin
+        - mount
+        - runc
+        - umount
+        - wolfi-baselayout
     pipeline:
       - runs: |
           # Remove the upload portion from the upstream package-cli script
@@ -151,10 +155,12 @@ subpackages:
         - busybox
         - conntrack-tools
         - ip6tables
+        - kmod
+        - merged-bin
         - mount
         - runc
         - umount
-        - kmod
+        - wolfi-baselayout
     options:
       # Do not provide copies of the statically linked embedded components (like containerd)
       no-provides: true
