--- a/ksh.yaml
+++ b/ksh.yaml
@@ -1,10 +1,14 @@
 package:
   name: ksh
   version: 1.0.10
-  epoch: 0
+  epoch: 30
   description: "KornShell 93u+m"
   copyright:
     - license: EPL-2.0
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
