--- a/openbao-k8s.yaml
+++ b/openbao-k8s.yaml
@@ -1,10 +1,14 @@
 package:
   name: openbao-k8s
   version: 1.4.0
-  epoch: 4
+  epoch: 30
   description: First-class support for OpenBao and Kubernetes.
   copyright:
     - license: MPL-2.0
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
@@ -34,6 +38,10 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/usr/bin"
           ln -sf /usr/bin/openbao-k8s "${{targets.subpkgdir}}/usr/bin/vault-k8s"
+    dependencies:
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
 
 update:
   enabled: true
