--- a/libnotify.yaml
+++ b/libnotify.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnotify
   version: "0.8.4"
-  epoch: 0
+  epoch: 1
   description: "GNOME/libnotify mirror"
   copyright:
     - license: LGPL-2.1-or-later
@@ -53,6 +53,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libnotify-dev
 
 update:
   enabled: true
