--- a/libnvme.yaml
+++ b/libnvme.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnvme
   version: 1.11.1
-  epoch: 1
+  epoch: 2
   description: C Library for NVM Express on Linux
   copyright:
     - license: LGPL-2.1-or-later
@@ -46,6 +46,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libnvme-dev
 
   - name: libnvme-python
     description: Python bindings for libnvme
