--- a/libogg.yaml
+++ b/libogg.yaml
@@ -1,7 +1,7 @@
 package:
   name: libogg
   version: 1.3.5
-  epoch: 3
+  epoch: 4
   description: Ogg bitstream and framing library
   copyright:
     - license: BSD-3-Clause
@@ -67,6 +67,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libogg-dev
 
 update:
   enabled: true
