--- a/libpaper.yaml
+++ b/libpaper.yaml
@@ -1,7 +1,7 @@
 package:
   name: libpaper
   version: "2.2.6"
-  epoch: 0
+  epoch: 1
   description: Library for handling paper characteristics
   copyright:
     - license: GPL-2.0-only
@@ -39,6 +39,11 @@ subpackages:
       runtime:
         - libpaper
     description: libpaper dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: libpaper-dev
 
   - name: libpaper-doc
     pipeline:
