--- a/util-linux.yaml
+++ b/util-linux.yaml
@@ -65,11 +65,6 @@ pipeline:
 
   - uses: autoconf/make-install
 
-  - runs: |
-      # Move to /usr/bin to overwrite busybox's version.
-      mv ${{targets.destdir}}/usr/bin/getopt \
-        ${{targets.destdir}}/usr/bin/rev ${{targets.destdir}}/usr/bin
-
 data:
   - name: libs
     items:
@@ -182,13 +177,13 @@ subpackages:
           install -Dm644 su-l.pamd ${{targets.subpkgdir}}/etc/pam.d/su-l
 
           cd ${{targets.destdir}}
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
           for cmd in newgrp last lastb login lslogins nologin su sulogin; do
             for dir in bin sbin usr/bin usr/sbin; do
               if [ -e $dir/$cmd ] || [ -L $dir/$cmd ]; then
                 pwd
                 ls -al
-                mkdir -p ${{targets.subpkgdir}}/$dir
-                mv $dir/$cmd ${{targets.subpkgdir}}/$dir/
+                mv $dir/$cmd ${{targets.subpkgdir}}/usr/bin/
                 continue 2
               fi
             done
@@ -220,7 +215,6 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/usr/bin
           for dir in usr/bin usr/sbin bin sbin; do
             if [ -e ${{targets.destdir}}/$dir ]; then
-              mkdir -p ${{targets.subpkgdir}}/$dir/
               mv ${{targets.destdir}}/$dir/* ${{targets.subpkgdir}}/usr/bin/
               rmdir ${{targets.destdir}}/$dir
             fi
