--- a/spark-3.5.yaml
+++ b/spark-3.5.yaml
@@ -2,7 +2,7 @@
 package:
   name: spark-3.5
   version: "3.5.5"
-  epoch: 1
+  epoch: 2
   description: Unified engine for large-scale data analytics
   copyright:
     - license: Apache-2.0
@@ -205,7 +205,7 @@ subpackages:
       - uses: strip
 
   - range: openjdk-versions
-    name: ${{package.name}}-minimal-openjdk-${{range.key}}
+    name: ${{package.name}}-scala-2.12-minimal-openjdk-${{range.key}}
     dependencies:
       runtime:
         - openjdk-${{range.key}}-default-jvm
