--- a/jenkins-docker.yaml
+++ b/jenkins-docker.yaml
@@ -1,7 +1,7 @@
 package:
   name: jenkins-docker
   version: "2.499"
-  epoch: 0
+  epoch: 30
   description: Docker compatbility scripts and tooling for Jenkins
   copyright:
     - license: MIT
@@ -14,12 +14,14 @@ package:
       - git
       - git-lfs
       - gnupg
+      - jenkins-plugin-manager-compat
+      - merged-bin
       - openssh-client
       - tini
       - ttf-dejavu
       - tzdata
       - unzip
-      - jenkins-plugin-manager-compat
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -37,7 +39,7 @@ pipeline:
   - runs: |
       install -Dm755 jenkins-support ${{targets.destdir}}/usr/local/bin/jenkins-support
       install -Dm755 jenkins.sh ${{targets.destdir}}/usr/local/bin/jenkins.sh
-      install -Dm755 jenkins-plugin-cli.sh ${{targets.destdir}}/bin/jenkins-plugin-cli
+      install -Dm755 jenkins-plugin-cli.sh ${{targets.destdir}}/usr/bin/jenkins-plugin-cli
 
 update:
   enabled: true
