Add the ldd-check test to libpciaccess

--- a/libpciaccess.yaml
+++ b/libpciaccess.yaml
@@ -2,7 +2,7 @@
 package:
   name: libpciaccess
   version: 0.18.1
-  epoch: 1
+  epoch: 2
   description: X11 PCI access library
   copyright:
     - license: X11
@@ -47,6 +47,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libpciaccess-dev
 
   - name: libpciaccess-doc
     pipeline:
