--- a/gcc.yaml
+++ b/gcc.yaml
@@ -1,7 +1,7 @@
 package:
   name: gcc
   version: 14.2.0
-  epoch: 9
+  epoch: 10
   description: "the GNU compiler collection"
   copyright:
     - license: GPL-3.0-or-later WITH GCC-exception-3.1
@@ -26,6 +26,7 @@ environment:
       - file
       - flex-dev
       - gawk
+      - glibc-iconv
       - gmp-dev
       - isl-dev
       - make
