--- a/coreutils.yaml
+++ b/coreutils.yaml
@@ -58,7 +58,8 @@ pipeline:
       rmdir -p usr/lib 2>/dev/null || true
 
       # busybox chroot
-      rm -f usr/sbin/chroot
+      mkdir -p usr/sbin
+      ln -s usr/bin/coreutils usr/sbin/chroot
 
       # shouldn't be here, but you never know...
       rm -f usr/bin/groups
