--- a/dash.yaml
+++ b/dash.yaml
@@ -78,7 +78,7 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
-          ln -s /usr/bin/dash "${{targets.subpkgdir}}"/usr/bin/sh
+          ln -s dash "${{targets.subpkgdir}}"/usr/bin/sh
     test:
       pipeline:
         - runs: |
