--- a/util-linux.yaml
+++ b/util-linux.yaml
@@ -407,6 +407,7 @@ subpackages:
       runtime:
         - merged-bin
         - merged-sbin
+        - setarch
         - wolfi-baselayout
 
 update:
