--- a/influxd.yaml
+++ b/influxd.yaml
@@ -69,51 +69,55 @@ subpackages:
 
   - name: ${{package.name}}-bitnami-compat
     description: "compat package with bitnami/influxdb image"
+    dependencies:
+      runtime:
+        - bash
+        - coreutils
+        - curl
+        - influxd
+        - grep
+        - libgcc
+        - procps
+        - sed
+        - wait-for-port # used in /opt/bitnami/scripts/libinfluxdb.sh
     pipeline:
       - uses: bitnami/compat
         with:
           image: influxdb
           version-path: ${{vars.major-version}}/debian-12
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxd/bin
-          cp ${{targets.destdir}}/usr/bin/influxd ${{targets.subpkgdir}}/opt/bitnami/influxd/bin/influxd
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxdb/bin
+          ln -sf /usr/bin/influxd ${{targets.subpkgdir}}/opt/bitnami/influxdb/bin/influxd
+
+          # copy etc to influxdb/etc.default
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxdb/etc.default
+          cp -pr ${{targets.destdir}}/etc/* ${{targets.subpkgdir}}/opt/bitnami/influxdb/etc.default/
+
+          chmod -R u+rwX,g+rwX,o+rw ${{targets.subpkgdir}}/opt/bitnami/
     test:
       environment:
-        contents:
-          packages:
-            - curl
+        environment:
+          BITNAMI_APP_NAME: "influxd"
       pipeline:
         - name: version tests
           runs: |
-            /opt/bitnami/influxd/bin/influxd version | grep ${{package.version}}
+            /opt/bitnami/influxdb/bin/influxd version | grep ${{package.version}}
         - name: Start the influxd server
           uses: test/daemon-check-output
           with:
             start: |
-              /opt/bitnami/influxd/bin/influxd run
+              env INFLUXDB_ADMIN_USER=marty \
+                  INFLUXDB_ADMIN_USER_PASSWORD=F1uxKapacit0r85 \
+                  INFLUXDB_ADMIN_ORG=InfluxData \
+                  INFLUXDB_ADMIN_BUCKET=telegraf \
+                  INFLUXDB_ADMIN_RETENTION=168 \
+                  INFLUXDB_ADMIN_USER_TOKEN=where-were-going-we-dont-need-roads \
+                  /opt/bitnami/scripts/influxdb/entrypoint.sh /opt/bitnami/scripts/influxdb/run.sh
             timeout: 60
             expected_output: |
-              Welcome to InfluxDB
-              Starting
-              Listening
-            post: |
-              #!/bin/sh -e
-              url=http://localhost:8086
-              response=$(curl -s -o /dev/null -w "%{http_code}" "$url")
-              if [ "$response" -ne 200 ]; then
-                echo "Error: InfluxDB did not start correctly."
-                exit 1
-              fi
-              html=$(curl -s "$url")
-              if [ -z "$html" ]; then
-                echo "Got empty HTML content from $url"
-                exit 1
-              fi
-              echo "$html" | grep -q "InfluxDB is a time series platform" || {
-                echo "response from $url did not contain \"InfluxDB is a time series platform\""
-                exit 1
-              }
-              echo "InfluxDB instance is up"
+              Welcome to the Bitnami influxd container
+              Starting InfluxDB in background...
+              Deploying InfluxDB from scratch
 
 update:
   enabled: true
