mkdir /bitnami/influxdb and added accounts to test so hopefully CI will pass
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/influxd.yaml
+++ b/influxd.yaml
@@ -92,12 +92,20 @@ subpackages:
           # copy etc to influxdb/etc.default
           mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxdb/etc.default
           cp -pr ${{targets.destdir}}/etc/* ${{targets.subpkgdir}}/opt/bitnami/influxdb/etc.default/
-
           chmod -R u+rwX,g+rwX,o+rw ${{targets.subpkgdir}}/opt/bitnami/
+
+          mkdir -p ${{targets.subpkgdir}}/bitnami/influxdb
+          chmod -R u+rwX,g+rwX,o+rw ${{targets.subpkgdir}}/bitnami/influxdb
     test:
       environment:
         environment:
           BITNAMI_APP_NAME: "influxd"
+        accounts:
+          users:
+            - username: influxdb
+              gid: 1000
+              uid: 1000
+          run-as: 1000
       pipeline:
         - name: version tests
           runs: |
