Fixes for shadow and openbao

--- a/openbao-k8s.yaml
+++ b/openbao-k8s.yaml
@@ -37,7 +37,7 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/usr/bin"
-          ln -sf /usr/bin/openbao-k8s "${{targets.subpkgdir}}/usr/bin/vault-k8s"
+          ln -sf usr/bin/openbao-k8s "${{targets.subpkgdir}}/usr/bin/vault-k8s"
     dependencies:
       runtime:
         - merged-bin
