--- a/openbao.yaml
+++ b/openbao.yaml
@@ -51,13 +51,13 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}/usr/bin"
-          ln -sf /usr/bin/bao "${{targets.subpkgdir}}/usr/bin/vault"
+          ln -sf usr/bin/bao "${{targets.subpkgdir}}/usr/bin/vault"
 
           install -m755 ./docker-entrypoint.sh "${{targets.subpkgdir}}/usr/bin/docker-entrypoint.sh"
 
           # The upstream helm chart expects the entrypoint in /usr/local/bin
           mkdir -p "${{targets.subpkgdir}}/usr/local/bin"
-          ln -s /usr/bin/docker-entrypoint.sh "${{targets.subpkgdir}}/usr/local/bin/docker-entrypoint.sh"
+          ln -s usr/bin/docker-entrypoint.sh "${{targets.subpkgdir}}/usr/local/bin/docker-entrypoint.sh"
     dependencies:
       provides:
         - ${{package.name}}-entrypoint=${{package.full-version}}
