--- a/shadow.yaml
+++ b/shadow.yaml
@@ -113,11 +113,11 @@ subpackages:
     pipeline:
       - runs: |
           cd ${{targets.destdir}}
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
           for bin in ${{vars.login-utils}}; do
             for dir in bin usr/bin usr/sbin; do
               if [ -e $dir/$bin ] || [ -L $dir/$bin ]; then
-                mkdir -p ${{targets.subpkgdir}}/$dir
-                mv ${{targets.destdir}}/$dir/$bin ${{targets.subpkgdir}}/$dir/
+                mv ${{targets.destdir}}/$dir/$bin ${{targets.subpkgdir}}/usr/bin/
               fi
             done
           done
@@ -172,10 +172,8 @@ subpackages:
   - name: shadow-subids
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/bin
-          mv ${{targets.destdir}}/bin/getsubids ${{targets.subpkgdir}}/bin/
-
           mkdir -p ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/bin/getsubids ${{targets.subpkgdir}}/usr/bin/
           mv ${{targets.destdir}}/usr/bin/new*idmap ${{targets.subpkgdir}}/usr/bin/
 
           mkdir -p ${{targets.subpkgdir}}/etc
