add kots-compat subpackage to kots
Signed-off-by: Rakshit Gondwal <rakshit.gondwal@chainguard.dev>

--- a/kots.yaml
+++ b/kots.yaml
@@ -85,6 +85,29 @@ subpackages:
 
           ln -s /usr/bin/kubectl ${{targets.subpkgdir}}/usr/local/bin/kubectl
     description: Compatability package for kots
+  - name: kots-compat # adding kots-compat here since we removed the older one and want to avoid breaking anything
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.destdir}}/usr/local/bin
+
+          # TODO: this is a manual intervention whenever helm releases a new major version
+          ln -s /usr/bin/helm ${{targets.destdir}}/usr/local/bin/helm
+          ln -s /usr/bin/helm ${{targets.destdir}}/usr/local/bin/helm3
+
+          # TODO: this is a manual intervention whenever kustomize releases a new major version
+          ln -s /usr/bin/kustomize ${{targets.destdir}}/usr/local/bin/kustomize
+          ln -s /usr/bin/kustomize ${{targets.destdir}}/usr/local/bin/kustomize5
+          
+          # TODO: this is a manual intervention whenever kubectl releases a new major version
+          ln -s /usr/bin/kubectl-1.20 ${{targets.destdir}}/usr/local/bin/kubectl-v1.20
+          ln -s /usr/bin/kubectl-1.21 ${{targets.destdir}}/usr/local/bin/kubectl-v1.21
+          ln -s /usr/bin/kubectl-1.22 ${{targets.destdir}}/usr/local/bin/kubectl-v1.22
+          ln -s /usr/bin/kubectl-1.23 ${{targets.destdir}}/usr/local/bin/kubectl-v1.23
+          ln -s /usr/bin/kubectl-1.24 ${{targets.destdir}}/usr/local/bin/kubectl-v1.24
+          ln -s /usr/bin/kubectl-1.25 ${{targets.destdir}}/usr/local/bin/kubectl-v1.25
+          ln -s /usr/bin/kubectl-1.26 ${{targets.destdir}}/usr/local/bin/kubectl-v1.26
+          ln -s /usr/bin/kubectl ${{targets.destdir}}/usr/local/bin/kubectl
+    description: Compatability package for kots
 
 update:
   enabled: true
