Moved .pc files and added pkgconf test

--- a/ninja-build.yaml
+++ b/ninja-build.yaml
@@ -43,8 +43,22 @@ pipeline:
 
   - uses: cmake/install
 
+  - runs: |
+      # Relocate .pc files to /usr/lib/pkgconfig and create symlinks
+      mkdir -p "${{targets.destdir}}"/usr/lib/pkgconfig/
+      find "${{targets.destdir}}"/usr/lib/ninja-build/lib/pkgconfig -name "*.pc" | while read pc_file; do
+        if [ ! -L "$pc_file" ]; then
+          mv "$pc_file" "${{targets.destdir}}"/usr/lib/pkgconfig/$(basename "$pc_file")
+          ln -s "${{targets.destdir}}"/usr/lib/pkgconfig/$(basename "$pc_file") "$pc_file"
+        fi
+      done
+
 update:
   enabled: true
   github:
     identifier: ninja-build/ninja
     strip-prefix: v
+
+test:
+  pipeline:
+    - uses: test/pkgconf
