python: Use more generic march for rosetta compatibiity
See: https://github.com/wolfi-dev/os/pull/38076

Related: chainguard-dev/customer-issues/2094
Signed-off-by: Pris Nasrat <pris.nasrat@chainguard.dev>

--- a/python-3.11.yaml
+++ b/python-3.11.yaml
@@ -1,7 +1,7 @@
 package:
   name: python-3.11
   version: 3.11.11
-  epoch: 1
+  epoch: 2
   description: "the Python programming language"
   copyright:
     - license: PSF-2.0
@@ -61,6 +61,21 @@ pipeline:
 
   - name: Configure
     runs: |
+      # Use more generic -march for rosetta2 compatibility
+      # Add additional flag overrides here
+      case "${{build.arch}}" in
+      "aarch64")
+         common_flags=""
+         ;;
+      "x86_64")
+         common_flags="-march=x86-64"
+         ;;
+      esac
+
+      export CFLAGS="${CFLAGS/-Os/-O2} $common_flags"
+      export CXXFLAGS="${CXXFLAGS/-Os/-O2} $common_flags"
+      export CPPFLAGS="${CPPFLAGS/-Os/-O2} $common_flags"
+
       ./configure \
          --host=${{host.triplet.gnu}} \
          --build=${{host.triplet.gnu}} \
@@ -79,6 +94,7 @@ pipeline:
          --with-builtin-hashlib-hashes=blake2 \
          --with-lto \
          --with-wheel-pkg-dir=/usr/share/python-wheels
+      exit 1
 
   - uses: autoconf/make
 
