remove linkerd-extension-init

--- a/linkerd-extension-init.yaml
+++ b/linkerd-extension-init.yaml
@@ -1,17 +1,10 @@
 package:
   name: linkerd-extension-init
   version: 0.1.2
-  epoch: 30
+  epoch: 1
   description: "A utility for initializing Linkerd extension namespaces after installation"
   copyright:
     - license: Apache-2.0
-  dependencies:
-    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
-    provides:
-      - ${{package.name}}-compat=${{package.full-version}}
-    runtime:
-      - merged-bin
-      - wolfi-baselayout
 
 environment:
   contents:
@@ -34,6 +27,18 @@ pipeline:
       output: linkerd-extension-init
 
   - uses: strip
+
+subpackages:
+  - name: "${{package.name}}-compat"
+    description: "Compatibility package to place binaries in the location expected by upstream helm charts"
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.contextdir}}"/bin
+          ln -sf /usr/bin/linkerd-extension-init ${{targets.contextdir}}/bin/linkerd-extension-init
+    test:
+      pipeline:
+        - runs: |
+            test -L /bin/linkerd-extension-init
 
 update:
   enabled: true
