fest(add test): Ading basic test to check the binary exiestence
All the binaries here do not have any subcommands or options. When executed directly, they all panic and throw errors. we are only verifying that the binaries exist in the expected location and have the correct executable permissions.

Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/sigstore-scaffolding.yaml
+++ b/sigstore-scaffolding.yaml
@@ -51,6 +51,9 @@ subpackages:
           output: ${{range.key}}
           ldflags: -w
       - uses: strip
+    test:
+      pipeline:
+        - runs: test -x /usr/bin/${{range.key}}
 
   - name: "${{package.name}}-cloudsqlproxy"
     pipeline:
@@ -65,6 +68,9 @@ subpackages:
       runtime:
         - cloud-sql-proxy
         - cloud-sql-proxy-compat
+    test:
+      pipeline:
+        - runs: test -x /usr/bin/cloudsqlproxy
 
 update:
   enabled: true
