--- a/libsass.yaml
+++ b/libsass.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsass
   version: "3.6.6"
-  epoch: 1
+  epoch: 2
   description: C/C++ implementation of a Sass compiler
   copyright:
     - license: MIT
@@ -46,6 +46,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libsass-dev
 
 update:
   enabled: true
