--- a/linkerd2.yaml
+++ b/linkerd2.yaml
@@ -1,17 +1,10 @@
 package:
   name: linkerd2
   version: "25.2.3"
-  epoch: 30
+  epoch: 0
   description: "meta linkerd package"
   copyright:
     - license: Apache-2.0
-  dependencies:
-    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
-    provides:
-      - ${{package.name}}-policy-controller-compat=${{package.full-version}}
-    runtime:
-      - merged-bin
-      - wolfi-baselayout
 
 environment:
   contents:
@@ -56,10 +49,6 @@ subpackages:
             /web -version
             /web -help
             /web 2>&1 | grep 'starting admin server'
-    dependencies:
-      runtime:
-        - merged-bin
-        - wolfi-baselayout
 
   - name: ${{package.name}}-cli
     pipeline:
@@ -78,10 +67,6 @@ subpackages:
       pipeline:
         - name: linkerd version check
           runs: linkerd version --client | grep ${{package.version}}
-    dependencies:
-      runtime:
-        - merged-bin
-        - wolfi-baselayout
 
   - name: ${{package.name}}-proxy-identity
     pipeline:
@@ -96,10 +81,6 @@ subpackages:
           runs: |
             # executable doesn't have help or version flag.
             stat /usr/lib/linkerd/linkerd2-proxy-identity
-    dependencies:
-      runtime:
-        - merged-bin
-        - wolfi-baselayout
 
   - name: ${{package.name}}-controller
     pipeline:
@@ -116,10 +97,6 @@ subpackages:
           runs: |
             # executable doesn't have help or version flag.
             stat /usr/bin/controller
-    dependencies:
-      runtime:
-        - merged-bin
-        - wolfi-baselayout
 
   - name: ${{package.name}}-controller-compat
     description: "upstream image have executable placed at /"
@@ -127,10 +104,6 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.contextdir}}/
           ln -sf /usr/bin/controller ${{targets.contextdir}}/controller
-    dependencies:
-      runtime:
-        - merged-bin
-        - wolfi-baselayout
 
   - name: ${{package.name}}-policy-controller
     pipeline:
@@ -146,17 +119,18 @@ subpackages:
           runs: |
             # executable doesn't have help or version flag.
             stat /usr/bin/linkerd-policy-controller
-    dependencies:
-      runtime:
-        - merged-bin
-        - wolfi-baselayout
+
+  - name: ${{package.name}}-policy-controller-compat
+    description: "upstream image have executable placed at /bin"
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/bin/
+          ln -sf /usr/bin/linkerd-policy-controller ${{targets.contextdir}}/bin/linkerd-policy-controller
 
   - name: ${{package.name}}-metrics-api
     dependencies:
       runtime:
         - ca-certificates-bundle
-        - merged-bin
-        - wolfi-baselayout
     pipeline:
       - uses: go/build
         with:
@@ -175,10 +149,6 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.contextdir}}
           ln -sf /usr/bin/metrics-api ${{targets.contextdir}}/metrics-api
-    dependencies:
-      runtime:
-        - merged-bin
-        - wolfi-baselayout
 
   - name: ${{package.name}}-tap
     pipeline:
@@ -194,20 +164,12 @@ subpackages:
             # it only take two args https://github.com/linkerd/linkerd2/blob/main/viz/tap/cmd/main.go (to be run inside kubernetes)
             stat /usr/bin/tap
             /usr/bin/tap api 2>&1 | grep "starting admin server"
-    dependencies:
-      runtime:
-        - merged-bin
-        - wolfi-baselayout
 
   - name: ${{package.name}}-tap-compat
     pipeline:
       - runs: |
           mkdir -p ${{targets.contextdir}}
           ln -sf /usr/bin/tap ${{targets.contextdir}}/tap
-    dependencies:
-      runtime:
-        - merged-bin
-        - wolfi-baselayout
 
   # the linkerd debug image doesn't have linkerd2 binaries, but has a number of tools
   - name: ${{package.name}}-debug
@@ -220,21 +182,19 @@ subpackages:
         - curl
         - findutils
         - grep
-        - iproute2
         - iptables
         - iptables-xtables-privileged
+        - lsof
+        - iproute2
         - jq
         - libcap
         - libcap-utils
-        - lsof
-        - merged-bin
         - nghttp2
         - openssl
         - sed
         - tcpdump
         - tshark
         - util-linux-misc
-        - wolfi-baselayout
 
 update:
   enabled: true
