--- a/libsdl2-ttf.yaml
+++ b/libsdl2-ttf.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsdl2-ttf
   version: 2.24.0
-  epoch: 1
+  epoch: 2
   description: A library that allows you to use TrueType fonts in your SDL applications (Version 2)
   copyright:
     - license: Zlib
@@ -38,6 +38,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libsdl2-ttf-dev
 
 update:
   enabled: true
