--- a/libsecret.yaml
+++ b/libsecret.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsecret
   version: "0.21.6"
-  epoch: 0
+  epoch: 1
   description: Library for storing and retrieving passwords and other secrets
   copyright:
     - license: LGPL-2.0-or-later
@@ -70,6 +70,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libsecret-dev
 
   - name: libsecret-lang
     pipeline:
