--- a/libsemanage.yaml
+++ b/libsemanage.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsemanage
   version: "3.8"
-  epoch: 1
+  epoch: 2
   description: "SELinux library and simple utilities"
   copyright:
     - license: LGPL-2.1-only
@@ -57,6 +57,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libsemanage-dev
 
 update:
   enabled: true
