usrmerge /bin - Remove -compat packages (#43105)

--- a/promxy.yaml
+++ b/promxy.yaml
@@ -1,13 +1,18 @@
 package:
   name: promxy
   version: "0.0.92"
-  epoch: 0
+  epoch: 30
   description: An aggregating proxy to enable HA prometheus.
   copyright:
     - license: MIT
   dependencies:
+    provides:
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      - promxy-compat=${{package.full-version}}
     runtime:
       - ca-certificates-bundle
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
@@ -32,15 +37,6 @@ pipeline:
     with:
       packages: ./cmd/remote_write_exporter
       output: remote_write_exporter
-
-subpackages:
-  - name: promxy-compat
-    description: "Compatibility package to symlink binaries to match upstream deployment"
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.subpkgdir}}/bin"
-          ln -sf /usr/bin/promxy "${{targets.subpkgdir}}/bin/promxy"
-          ln -sf /usr/bin/remote_write_exporter "${{targets.subpkgdir}}/bin/remote_write_exporter"
 
 update:
   enabled: true
