--- a/secrets-store-csi-driver-provider-azure.yaml
+++ b/secrets-store-csi-driver-provider-azure.yaml
@@ -1,14 +1,19 @@
 package:
   name: secrets-store-csi-driver-provider-azure
   version: 1.6.2
-  epoch: 2
+  epoch: 30
   description: Azure Key Vault provider for Secret Store CSI driver
   copyright:
     - license: MIT
   dependencies:
+    provides:
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      - ${{package.name}}-compat=${{package.full-version}}
     runtime:
       - ca-certificates-bundle
+      - merged-bin
       - tzdata
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
@@ -29,24 +34,6 @@ pipeline:
         -X github.com/Azure/secrets-store-csi-driver-provider-azure/pkg/version.BuildDate=$(date +%Y-%m-%d-%H:%M)
         -X github.com/Azure/secrets-store-csi-driver-provider-azure/pkg/pkg/version.Vcs=$(git rev-parse --short HEAD)
         -X github.com/Azure/secrets-store-csi-driver-provider-azure/pkg/version.BuildVersion=${{package.version}}
-
-subpackages:
-  - name: ${{package.name}}-compat
-    description: Compat package for ${{package.name}}
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.contextdir}}"/bin
-          ln -sf /usr/bin/${{package.name}} "${{targets.contextdir}}"/bin/${{package.name}}
-    test:
-      environment:
-        contents:
-          packages:
-            - ${{package.name}}
-      pipeline:
-        - runs: |
-            stat /bin/secrets-store-csi-driver-provider-azure
-            /bin/secrets-store-csi-driver-provider-azure --version | grep ${{package.version}}
-            /bin/secrets-store-csi-driver-provider-azure --help
 
 update:
   enabled: true
