--- a/argo-rollouts.yaml
+++ b/argo-rollouts.yaml
@@ -1,10 +1,17 @@
 package:
   name: argo-rollouts
   version: "1.8.0"
-  epoch: 2
+  epoch: 30
   description: Progressive Delivery for Kubernetes
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
@@ -39,6 +46,13 @@ pipeline:
 
 subpackages:
   - name: kubectl-argo-rollouts
+    dependencies:
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      provides:
+        - kubectl-argo-rollouts-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: go/bump
         with:
@@ -57,20 +71,6 @@ subpackages:
       pipeline:
         - runs: |
             kubectl-argo-rollouts --help
-
-  - name: ${{package.name}}-compat
-    description: "upstream image have executable placed at /bin"
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin/
-          ln -sf /usr/bin/rollouts-controller ${{targets.contextdir}}/bin/rollouts-controller
-
-  - name: kubectl-argo-rollouts-compat
-    description: "upstream image have executable placed at /bin"
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin/
-          ln -sf /usr/bin/kubectl-argo-rollouts ${{targets.contextdir}}/bin/kubectl-argo-rollouts
 
 update:
   enabled: true
