--- a/contour-1.30.yaml
+++ b/contour-1.30.yaml
@@ -1,13 +1,18 @@
 package:
   name: contour-1.30
   version: "1.30.2"
-  epoch: 3
+  epoch: 30
   description: Contour is a Kubernetes ingress controller using Envoy proxy.
   copyright:
     - license: Apache-2.0
   dependencies:
     provides:
       - contour=${{package.full-version}}
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 var-transforms:
   - from: ${{package.version}}
@@ -42,21 +47,14 @@ pipeline:
         -X github.com/projectcontour/contour/internal/build.Branch=$(git rev-parse --abbrev-ref HEAD)
 
 subpackages:
-  - name: ${{package.name}}-compat
-    description: "compat package for contour as expected by envoy"
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/bin
-          ln -s /usr/bin/contour "${{targets.subpkgdir}}"/bin/contour
-    dependencies:
-      provides:
-        - contour-compat=${{package.full-version}}
-
   - name: ${{package.name}}-bitnami-compat
     description: "compat package with bitnami/contour image"
     dependencies:
       provides:
         - contour-bitnami-compat=${{package.full-version}}
+      runtime:
+        - merged-bin
+        - wolfi-baselayout
     pipeline:
       - uses: bitnami/compat
         with:
