--- a/envoy-ratelimit.yaml
+++ b/envoy-ratelimit.yaml
@@ -3,10 +3,17 @@ package:
   name: envoy-ratelimit
   # This project doesn't do releases and everything is commit based.
   version: "0.0.0_git20250303"
-  epoch: 1
+  epoch: 30
   description: Go/gRPC service designed to enable generic rate limit scenarios from different types of applications.
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - envoy-ratelimit-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -53,15 +60,6 @@ test:
         if ! pgrep ratelimit; then
           echo "Ratelimit service failed to start" && exit 1
         fi
-
-subpackages:
-  - name: envoy-ratelimit-compat
-    pipeline:
-      - runs: |
-          # The helm chart expects the ratelimit binary to be in /bin instead of /usr/bin
-          mkdir -p "${{targets.subpkgdir}}"/bin
-          ln -sf /usr/bin/ratelimit ${{targets.subpkgdir}}/bin/ratelimit
-    description: Compatibility package to place binaries in the location expected by upstream helm charts
 
 update:
   enabled: true
