--- a/gitlab-pages-17.9.yaml
+++ b/gitlab-pages-17.9.yaml
@@ -1,13 +1,19 @@
 package:
   name: gitlab-pages-17.9
   version: "17.9.1"
-  epoch: 0
+  epoch: 30
   description: GitLab Pages daemon used to serve static websites for GitLab users.
   copyright:
     - license: MIT
   dependencies:
     provides:
       - gitlab-pages=${{package.full-version}}
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      - gitlab-pages-compat-${{vars.major-minor-version}}
+      - gitlab-pages-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 var-transforms:
   - from: ${{package.version}}
@@ -32,26 +38,6 @@ pipeline:
   - runs: |
       mkdir -p ${{targets.contextdir}}/srv/gitlab-pages
       mkdir -p ${{targets.contextdir}}/var/log/gitlab
-
-subpackages:
-  - name: gitlab-pages-compat-${{vars.major-minor-version}}
-    description: Links GitLab pages to bin directory
-    dependencies:
-      provides:
-        - gitlab-pages-compat=${{package.full-version}}
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin
-          ln -sf /usr/bin/gitlab-pages ${{targets.contextdir}}/bin/gitlab-pages
-    test:
-      environment:
-        contents:
-          packages:
-            - gitlab-pages-${{vars.major-minor-version}}
-      pipeline:
-        - runs: |
-            test -x /bin/gitlab-pages
-            /bin/gitlab-pages --version
 
 update:
   enabled: true
