--- a/grafana-rollout-operator.yaml
+++ b/grafana-rollout-operator.yaml
@@ -1,10 +1,17 @@
 package:
   name: grafana-rollout-operator
   version: "0.24.0"
-  epoch: 0
+  epoch: 30
   description: Kubernetes Rollout Operator
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
@@ -17,14 +24,6 @@ pipeline:
     with:
       packages: ./cmd/rollout-operator
       output: rollout-operator
-
-subpackages:
-  - name: ${{package.name}}-compat
-    description: "upstream image have executable placed at /bin"
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin
-          ln -sf /usr/bin/rollout-operator ${{targets.contextdir}}/bin/rollout-operator
 
 test:
   pipeline:
