--- a/grpc-health-probe.yaml
+++ b/grpc-health-probe.yaml
@@ -1,10 +1,17 @@
 package:
   name: grpc-health-probe
   version: "0.4.37"
-  epoch: 3
+  epoch: 30
   description: A command-line tool to perform health-checks for gRPC applications in Kubernetes and elsewhere
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
@@ -25,17 +32,6 @@ pipeline:
       ldflags: -X main.versionTag=v${{package.version}}
 
   - uses: strip
-
-subpackages:
-  - name: ${{package.name}}-compat
-    pipeline:
-      - runs: |
-          # Symlink the binary from usr/bin to /bin
-          mkdir -p "${{targets.subpkgdir}}"/bin
-          ln -sf /usr/bin/grpc-health-probe ${{targets.subpkgdir}}/bin/grpc-health-probe
-    dependencies:
-      runtime:
-        - ${{package.name}}
 
 update:
   enabled: true
