--- a/secrets-store-csi-driver-provider-aws.yaml
+++ b/secrets-store-csi-driver-provider-aws.yaml
@@ -1,10 +1,17 @@
 package:
   name: secrets-store-csi-driver-provider-aws
   version: "0.3.11"
-  epoch: 0
+  epoch: 30
   description: AWS Secrets Manager and AWS Systems Manager Parameter Store provider for the Secret Store CSI Driver.
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+    provides:
+      - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -38,15 +45,6 @@ pipeline:
       cp _output/secrets-store-csi-driver-provider-aws-* ${{targets.destdir}}/usr/bin/secrets-store-csi-driver-provider-aws
 
   - uses: strip
-
-subpackages:
-  # create a compat package where you create a smylink between /usr/bin and /bin
-  - name: ${{package.name}}-compat
-    description: Compatibility package for secrets-store-csi-driver-provider-aws
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin/
-          ln -sf /usr/bin/secrets-store-csi-driver-provider-aws ${{targets.contextdir}}/bin/secrets-store-csi-driver-provider-aws
 
 update:
   enabled: true
