--- a/sql_exporter.yaml
+++ b/sql_exporter.yaml
@@ -1,10 +1,19 @@
 package:
   name: sql_exporter
   version: 0.17.0
-  epoch: 2
+  epoch: 30
   description: Database-agnostic SQL Exporter for Prometheus
   copyright:
     - license: Apache-2.0
+  dependencies:
+    # REMOVE_POST_USRMERGE
+    # This needs to be removed after usrmerge is complete and images
+    # are updated to not depend on compat packages.
+    provides:
+      - ${{package.name}}-compat=${{package.full-version}}
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 pipeline:
   - uses: git-checkout
@@ -23,14 +32,6 @@ pipeline:
         -X github.com/prometheus/common/version.BuildUser=$(whoami)@$HOSTNAME
         -X github.com/prometheus/common/version.BuildDate=$(date -u -d "@${SOURCE_DATE_EPOCH:-$(date +%s)}" "+%Y-%m-%dT%H:%M:%SZ")
       output: sql_exporter
-
-subpackages:
-  - name: ${{package.name}}-compat
-    description: "upstream image have executable placed at /bin"
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.contextdir}}"/bin
-          ln -sf /usr/bin/sql_exporter "${{targets.contextdir}}"/bin/sql_exporter
 
 update:
   enabled: true
