glibc - usrmerge usr/sbin bump epoch, add dependencies

--- a/glibc.yaml
+++ b/glibc.yaml
@@ -1,7 +1,7 @@
 package:
   name: glibc
   version: 2.40
-  epoch: 21
+  epoch: 40
   description: "the GNU C library"
   copyright:
     - license: LGPL-2.1-or-later
@@ -19,7 +19,7 @@ package:
       # Needed for some pthread functionality
       - libgcc
       - merged-sbin
-      - wolfi-baselayout
+      - merged-usrsbin
       - wolfi-baselayout
   scriptlets:
     trigger:
@@ -396,7 +396,7 @@ subpackages:
       provider-priority: 10
       runtime:
         - merged-sbin
-        - wolfi-baselayout
+        - merged-usrsbin
         - wolfi-baselayout
     test:
       environment:
@@ -450,6 +450,7 @@ subpackages:
         - libxcrypt-dev
         - linux-headers
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "glibc-iconv"
@@ -469,6 +470,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "glibc-locales"
@@ -481,6 +483,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "tzutils"
@@ -504,6 +507,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "posix-libc-utils"
@@ -512,6 +516,7 @@ subpackages:
       runtime:
         - bash
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
     pipeline:
       - runs: |
@@ -556,6 +561,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "sotruss"
@@ -578,6 +584,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "nscd"
@@ -594,6 +601,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "nss-db"
@@ -618,6 +626,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "nss-hesiod"
@@ -634,6 +643,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "pcprofiledump"
@@ -653,6 +663,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "glibc-tracing"
@@ -673,6 +684,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "sln"
@@ -689,6 +701,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "libcrypt1"
@@ -700,6 +713,7 @@ subpackages:
       runtime:
         - libxcrypt
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - name: "glibc-locale-posix"
@@ -711,6 +725,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   - range: locales
@@ -730,6 +745,7 @@ subpackages:
     dependencies:
       runtime:
         - merged-sbin
+        - merged-usrsbin
         - wolfi-baselayout
 
   # Similar to https://packages.debian.org/bookworm/libc-bin
@@ -739,6 +755,7 @@ subpackages:
       runtime:
         - localedef
         - merged-sbin
+        - merged-usrsbin
         - posix-libc-utils
         - tzutils
         - wolfi-baselayout
