Add the ldd-check test to libslirp

--- a/libslirp.yaml
+++ b/libslirp.yaml
@@ -1,7 +1,7 @@
 package:
   name: libslirp
   version: "4.9.0"
-  epoch: 0
+  epoch: 1
   description: A general purpose TCP-IP emulator
   copyright:
     - license: BSD-3-Clause
@@ -41,6 +41,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libslirp-dev
 
 update:
   enabled: true
