ruby3.3-rack: add require, basic functional test

--- a/ruby3.3-rack.yaml
+++ b/ruby3.3-rack.yaml
@@ -37,6 +37,29 @@ pipeline:
 vars:
   gem: rack
 
+test:
+  environment:
+    contents:
+      packages:
+        - curl
+        - ruby${{vars.rubyMM}}-rackup
+        - ruby${{vars.rubyMM}}-puma
+  pipeline:
+    - uses: ruby/require
+      with:
+        module_name: ${{vars.gem}}
+    - runs: |
+        cat << EOF > config.ru
+        run do |env|
+          [200, {}, ["Hello World"]]
+        end
+        EOF
+
+        rackup &
+        sleep 1
+
+        curl http://localhost:9292 | grep -q "Hello World"
+
 update:
   enabled: true
   git:
