Add the ldd-check test to libva

--- a/libva.yaml
+++ b/libva.yaml
@@ -2,7 +2,7 @@
 package:
   name: libva
   version: 2.22.0
-  epoch: 3
+  epoch: 4
   description: Video Acceleration (VA) API for Linux
   copyright:
     - license: MIT
@@ -51,6 +51,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libva-dev
     description: libva dev
 
 update:
