--- a/.github/chainguard/lifecycle-eol-pr-readyorclose.sts.yaml
+++ b/.github/chainguard/lifecycle-eol-pr-readyorclose.sts.yaml
@@ -1,6 +1,6 @@
 issuer: https://accounts.google.com
 
-claims:
+claim_pattern:
   email: eol-pr-readyorclose@staging-enforce-cd1e.iam.gserviceaccount.com
   email_verified: true
 
