--- a/nats-top.yaml
+++ b/nats-top.yaml
@@ -37,10 +37,10 @@ test:
   environment:
     contents:
       packages:
-        - bash
         - nats-server
         - nats
         - openssl
+        - util-linux-misc
   pipeline:
     - name: "Version test"
       runs: |
@@ -48,27 +48,25 @@ test:
     - name: Test nats-top with minimal nats server and 2 clients
       runs: |
         nats-server -p 4222 -m 8222 & sleep 2 &
-        nats sub client1 > /dev/null & sleep 2 & nats sub client2 > /dev/null & sleep 1
+        nats sub client1 > /dev/null & sleep 2 & nats sub client2 > /dev/null & sleep 2
         nats-top -s localhost -b -u -o nats-output-${{package.version}}.txt
         cat nats-output-${{package.version}}.txt
-    - name: test connection limit (-n)
+    - name: test connection limit (-n) abd sorting options (-sort)
       runs: |
-        nats-top -n 2 -o nats-output-${{package.version}}.txt
+        nats-top -n 2 -sort uptime -o nats-output-${{package.version}}.txt
         grep "Connections Polled:" nats-output-${{package.version}}.txt
+        tail -n 5 nats-output-${{package.version}}.txt
     - name: test sorting options (-sort)
       runs: |
         nats-top -sort uptime -o nats-output-${{package.version}}.txt
         tail -n 5 nats-output-${{package.version}}.txt
-    - name: test setting refresh delay (-d)
-      runs: |
-        nats-top -d 2 & sleep 2
-    - name: test limiting refresh count (-r)
-      runs: |
-        nats-top -r 2 & sleep 4
     - name: test output with delimiter (-l)
       runs: |
         nats-top -o nats-output-${{package.version}}.csv -l ","
         head -n 5 nats-output-${{package.version}}.csv
+    - name: test setting refresh delay (-d) and refresh count (-r)
+      runs: |
+        export TERM=xterm && timeout 3 script -q -c "nats-top -d 1 -r 3" /dev/null
     - name: Test Nats-top in TLS mode
       runs: |
         mkdir -p /tmp/certs
@@ -79,13 +77,19 @@ test:
         # Generate Server Certificate
         openssl genrsa -out server-key.pem 2048
         openssl req -new -key server-key.pem -out server-csr.pem -subj "/CN=localhost"
-        openssl x509 -req -in server-csr.pem -CA ca-cert.pem -CAkey ca-key.pem -CAcreateserial -out server-cert.pem -days 365
+        openssl x509 -req -in server-csr.pem -CA ca-cert.pem -CAkey ca-key.pem -CAcreateserial -out server-cert.pem -days 365 -extfile <(printf "subjectAltName=DNS:localhost,IP:127.0.0.1")
         # Generate Client Certificate
         openssl genrsa -out client-key.pem 2048
         openssl req -new -key client-key.pem -out client-csr.pem -subj "/CN=NATS-Client"
-        openssl x509 -req -in client-csr.pem -CA ca-cert.pem -CAkey ca-key.pem -CAcreateserial -out client-cert.pem -days 365
+        openssl x509 -req -in client-csr.pem -CA ca-cert.pem -CAkey ca-key.pem -CAcreateserial -out client-cert.pem -days 365 -extfile <(printf "subjectAltName=DNS:localhost,IP:127.0.0.1")
         cd ../..
         pkill nats-server & sleep 2
-        nats-server -p 4222 -m 8222 --tls --tlscert ./tmp/certs/server-cert.pem --tlskey ./tmp/certs/server-key.pem --tlscacert ./tmp/certs/ca-cert.pem & sleep 2
-        nats-top -s localhost -cert ./tmp/certs/client-cert.pem -key ./tmp/certs/client-key.pem -cacert ./tmp/certs/ca-cert.pem -o nats-output-${{package.version}}.txt
+        openssl verify -CAfile ./tmp/certs/ca-cert.pem ./tmp/certs/server-cert.pem
+        openssl verify -CAfile ./tmp/certs/ca-cert.pem ./tmp/certs/client-cert.pem
+        # Setting up NATS server
+        nats-server -p 4223 -m 8223 --tls --tlscert ./tmp/certs/server-cert.pem --tlskey ./tmp/certs/server-key.pem --tlscacert ./tmp/certs/ca-cert.pem & sleep 2
+        # Creating a NATS client and publishing sample message
+        nats sub -s "localhost:4223" --tlscert ./tmp/certs/client-cert.pem --tlskey ./tmp/certs/client-key.pem --tlsca ./tmp/certs/ca-cert.pem "test.subject" > /dev/null & sleep 1
+        # Test NATS top in TLS mode
+        nats-top -s localhost -m 8223 -cert ./tmp/certs/client-cert.pem -key ./tmp/certs/client-key.pem -cacert ./tmp/certs/ca-cert.pem -o nats-output-${{package.version}}.txt
         cat nats-output-${{package.version}}.txt
