--- a/spark-3.5.yaml
+++ b/spark-3.5.yaml
@@ -2,10 +2,14 @@
 package:
   name: spark-3.5
   version: "3.5.5"
-  epoch: 2
+  epoch: 40
   description: Unified engine for large-scale data analytics
   copyright:
     - license: Apache-2.0
+  dependencies:
+    runtime:
+      - merged-usrsbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -64,18 +68,20 @@ subpackages:
       # but will be added in the image, since upstream supports different Python versions
       # and Java versions. So we don't need to specify them here to avoid conflicts.
       runtime:
-        - openjdk-${{range.key}}-default-jvm
         - bash
         - busybox
-        - procps
+        - libnss
+        - linux-pam
+        - logrotate
+        - merged-usrsbin
+        - net-tools
+        - openjdk-${{range.key}}-default-jvm
         - posix-libc-utils
+        - procps
+        - procps
         - tini
         - tini-compat
-        - net-tools
-        - logrotate
-        - linux-pam
-        - procps
-        - libnss
+        - wolfi-baselayout
       provides:
         - spark=${{package.full-version}}
         - ${{package.name}}=${{package.full-version}}
@@ -189,6 +195,9 @@ subpackages:
     dependencies:
       provides:
         - spark-compat=${{package.full-version}}
+      runtime:
+        - merged-usrsbin
+        - wolfi-baselayout
     pipeline:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
@@ -208,7 +217,9 @@ subpackages:
     name: ${{package.name}}-scala-2.12-minimal-openjdk-${{range.key}}
     dependencies:
       runtime:
+        - merged-usrsbin
         - openjdk-${{range.key}}-default-jvm
+        - wolfi-baselayout
       provides:
         - spark-minimal=${{package.full-version}}
         - ${{package.name}}-minimal=${{package.full-version}}
@@ -227,6 +238,8 @@ subpackages:
     dependencies:
       runtime:
         - coreutils # needed for cp -nr command
+        - merged-usrsbin
+        - wolfi-baselayout
     pipeline:
       - uses: bitnami/compat
         with:
@@ -257,7 +270,9 @@ subpackages:
     name: ${{package.name}}-scala-2.13-openjdk-${{range.key}}
     dependencies:
       runtime:
+        - merged-usrsbin
         - openjdk-${{range.key}}-default-jvm
+        - wolfi-baselayout
     pipeline:
       - runs: |
           git stash
@@ -361,6 +376,10 @@ subpackages:
               python3 setup.py sdist
           - uses: python/build
           - uses: python/install
+    dependencies:
+      runtime:
+        - merged-usrsbin
+        - wolfi-baselayout
 
   - name: ${{package.name}}-scala-2.13-compat
     description: "Compatibility package to place binaries in the location expected by upstream image"
@@ -375,6 +394,10 @@ subpackages:
           ln -sf /usr/lib/spark/bin/spark-class ${{targets.subpkgdir}}/usr/bin/spark-class
           ln -sf /usr/lib/spark/bin/spark-sql ${{targets.subpkgdir}}/usr/bin/spark-sql
           ln -sf /usr/lib/spark/entrypoint.sh ${{targets.subpkgdir}}/opt/entrypoint.sh
+    dependencies:
+      runtime:
+        - merged-usrsbin
+        - wolfi-baselayout
 
 update:
   enabled: true
