--- a/contour-1.30.yaml
+++ b/contour-1.30.yaml
@@ -1,7 +1,7 @@
 package:
   name: contour-1.30
   version: "1.30.2"
-  epoch: 30
+  epoch: 40
   description: Contour is a Kubernetes ingress controller using Envoy proxy.
   copyright:
     - license: Apache-2.0
@@ -12,6 +12,7 @@ package:
       - ${{package.name}}-compat=${{package.full-version}}
     runtime:
       - merged-bin
+      - merged-usrsbin
       - wolfi-baselayout
 
 var-transforms:
@@ -54,6 +55,7 @@ subpackages:
         - contour-bitnami-compat=${{package.full-version}}
       runtime:
         - merged-bin
+        - merged-usrsbin
         - wolfi-baselayout
     pipeline:
       - uses: bitnami/compat
