--- a/rabbitmq-server-4.0.yaml
+++ b/rabbitmq-server-4.0.yaml
@@ -1,7 +1,7 @@
 package:
   name: rabbitmq-server-4.0
   version: "4.0.7"
-  epoch: 0
+  epoch: 40
   description: Open source RabbitMQ. core server and tier 1 (built-in) plugins
   copyright:
     - license: MPL-2.0
@@ -12,7 +12,9 @@ package:
       # rabbitmq-server is a wrapper shell script.
       - busybox
       - erlang-27
+      - merged-usrsbin
       - posix-libc-utils
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -81,6 +83,9 @@ subpackages:
     dependencies:
       provides:
         - rabbitmq-server-doc=${{package.full-version}}
+      runtime:
+        - merged-usrsbin
+        - wolfi-baselayout
     test:
       pipeline:
         - uses: test/docs
@@ -129,6 +134,9 @@ subpackages:
     dependencies:
       provides:
         - rabbitmq-server-bitnami-compat=${{package.full-version}}
+      runtime:
+        - merged-usrsbin
+        - wolfi-baselayout
 
 update:
   enabled: true
