--- a/repmgr-17.yaml
+++ b/repmgr-17.yaml
@@ -1,7 +1,7 @@
 package:
   name: repmgr-17
   version: 5.5.0
-  epoch: 2
+  epoch: 40
   description: "A lightweight replication manager for PostgreSQL"
   copyright:
     - license: GPL-3.0-only
@@ -10,9 +10,11 @@ package:
       - repmgr=${{package.full-version}}
     runtime:
       - libpq-17
+      - merged-usrsbin
       - pgaudit-17
       - postgresql-17
       - postgresql-17-client
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -68,55 +70,57 @@ subpackages:
     description: "compat package with bitnami/repmgr image"
     dependencies:
       runtime:
-        - busybox
-        - posix-libc-utils
-        - glibc-locale-en
-        - curl
-        - coreutils
         - bash
         - brotli
+        - busybox
+        - coreutils
+        - curl
+        - cyrus-sasl
+        - glibc-locale-en
+        - glibc-locales
+        - gmp
+        - gnutls
+        - grep
+        - icu-libs
+        - keyutils-libs
+        - krb5
+        - krb5-libs
         - libcom_err
         - libcurl-openssl4
         - libedit
         - libffi
         - libgcc
-        - gnutls
-        - nettle
-        - net-tools
-        - icu-libs
         - libidn
-        - krb5
-        - keyutils-libs
         - libldap
         - liblz4-1
-        - xz
         - libmd
         - libnghttp2-14
-        - p11-kit-trust
-        - pcre2
         - libpsl
-        - readline
         - librtmp
-        - sqlite-libs
-        - sed
-        - grep
         - libssh
         - libssl3
         - libstdc++-6
         - libtasn1
-        - ncurses
         - libunistring
         - libuuid
         - libxml2
         - libxslt
         - libzstd1
-        - glibc-locales
+        - merged-usrsbin
+        - ncurses
+        - net-tools
+        - nettle
+        - p11-kit-trust
+        - pcre2
+        - posix-libc-utils
         - procps
-        - zlib
+        - readline
         - samba-libs
-        - krb5-libs
-        - cyrus-sasl
-        - gmp
+        - sed
+        - sqlite-libs
+        - wolfi-baselayout
+        - xz
+        - zlib
     pipeline:
       - uses: bitnami/compat
         with:
