chromium: fix build failure with our Rust version
Upstream Rust moved from adler to adler2 in 1.86, and upstream Chromium
have already followed that move: if we're building with 1.85.x (the
current wolfi Rust version as of authoring), then instruct GN to use the
older lib.  (I figured this out based on the resolution of this build
failure in Gentoo: https://bugs.gentoo.org/950040)

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -233,6 +233,18 @@ pipeline:
       mkdir -p third_party/jdk/current/bin
       ln -s /usr/bin/java third_party/jdk/current/bin/java
 
+      # Upstream Rust moved from adler to adler2 in 1.86, and upstream Chromium
+      # have already followed that move: if we're building with 1.85.x (the
+      # current wolfi Rust version as of authoring), then instruct GN to use
+      # the older lib.  (I figured this out based on the resolution of this
+      # build failure in Gentoo: https://bugs.gentoo.org/950040)
+      rust_version="$(rustc --version | awk '{ print $2;}')"
+      case $rust_version in
+        1.85.*)
+          sed -i 's/adler2/adler/' build/rust/std/BUILD.gn
+          ;;
+      esac
+
   - name: Generate gn config
     runs: |
       # Fetch clang version
