wip: clickhouse compat package

--- a/clickhouse-25.1-bitnami-compat.yaml
+++ b/clickhouse-25.1-bitnami-compat.yaml
@@ -1,6 +1,6 @@
 package:
-  name: clickhouse-24.12-bitnami-compat
-  version: "25.2.1.3085"
+  name: clickhouse-25.1-bitnami-compat
+  version: "25.1.6.34"
   epoch: 0
   description: Clickhouse 
   copyright:
@@ -8,18 +8,74 @@ package:
   resources:
     cpu: 65
     memory: 32Gi
+  dependencies:
+    runtime: 
+      - clickhouse-25.1
 
 environment:
   contents:
     packages:
-      - clickhouse-25.1-bitnami-compat
+      - clickhouse-25.1
+      - busybox
+      - bash
+      - shadow
+      - findutils
 
 pipeline:
   - uses: bitnami/compat
     with: 
       image: clickhouse
       version-path: 25/debian-12
-    runs: |
-      install -Dm755 ../docker/server/entrypoint.sh ${{targets.destdir}}/entrypoint.sh
-      mkdir -p ${{targets.destdir}}/etc/clickhouse-server/config.d/
-      cp  ../docker/server/docker_related_config.xml ${{targets.destdir}}/etc/clickhouse-server/config.d/docker_related_config.xml
+  - runs: |
+      set -x
+      mkdir -p ${{targets.contextdir}}/bitnami/clickhouse/data/tmp
+      mkdir -p ${{targets.contextdir}}/bitnami/clickhouse/etc
+      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse
+      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default
+      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc
+      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.d
+      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/conf.d
+      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.d
+      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/bin
+      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/logs
+      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/tmp
+      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/licenses
+
+      mkdir ${{targets.contextdir}}/docker-entrypoint-initdb.d
+      mkdir ${{targets.contextdir}}/docker-entrypoint-startdb.d
+      
+      # ln -s /opt/bitnami/clickhouse/tmp ${{targets.contextdir}}/bitnami/clickhouse/data/tmp
+      # ln -s /dev/stdout ${{targets.contextdir}}/opt/bitnami/clickhouse/logs/clickhouse.log
+      # ln -s /dev/stderr ${{targets.contextdir}}/opt/bitnami/clickhouse/logs/clickhouse_error.log 
+
+      ln -s /etc/clickhouse-keeper/keeper-config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/keeper-config.xml
+      ln -s /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.xml
+      ln -s /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.xml
+
+      # Use package path while unpacking
+      find . -iname "*.sh" -exec sed 's#/opt/bitnami#${{targets.contextdir}}/opt/bitnami#g' -i {} \;
+        ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
+      # Restore path
+      find ${{targets.contextdir}}/opt/bitnami -type f -exec sed 's#${{targets.contextdir}}##g' -i {} \;
+
+      
+      # Find all files in /usr/bin that are either named "clickhouse" or symlinks pointing to "clickhouse"
+      for file in /usr/bin/*; do
+          if [ -f "$file" ] && [ "$(basename "$file")" = "clickhouse" ]; then
+              # Found a direct match for "clickhouse"
+              ln -sf /usr/bin/clickhouse ${{targets.contextdir}}/opt/bitnami/bin/clickhouse
+          elif [ -L "$file" ]; then
+              # Check if the symlink points to clickhouse
+              target=$(readlink -f "$file")
+              if [ "$(basename "$target")" = "clickhouse" ]; then
+                  link_name=$(basename "$file")
+                  ln -sf /usr/bin/clickhouse "${{targets.contextdir}}/opt/bitnami/bin/$link_name"
+              fi
+          fi
+      done
+
+      ln -s /usr/bin/clickhouse-library-bridge ${{targets.contextdir}}/opt/bitnami/bin/clickhouse-library-bridge
+      ln -s /usr/bin/clickhouse-odbc-bridge ${{targets.contextdir}}/opt/bitnami/bin/clickhouse-odbc-bridge
+
+
+
