added a handful of safe emptypackage tests for virtual packages

--- a/opentelemetry-java-contrib.yaml
+++ b/opentelemetry-java-contrib.yaml
@@ -72,3 +72,7 @@ update:
   github:
     identifier: open-telemetry/opentelemetry-java-contrib
     strip-prefix: v
+
+test:
+  pipeline:
+    - uses: test/emptypackage
