wip: add to compat package

--- a/clickhouse-25.1-bitnami-compat.yaml
+++ b/clickhouse-25.1-bitnami-compat.yaml
@@ -52,9 +52,15 @@ pipeline:
       ln -s /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.xml
       ln -s /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.xml
 
+      # Disable some commands used in Bitnami scripts. These commands more likely fail in this since this image take non root approach
+      sed -i 's/owned_by "$dir" "$owner_user" "$owner_group"/return/g' ${{targets.contextdir}}/opt/bitnami/scripts/libfs.sh
+      sed -i 's/ensure_user_exists/# ensure_user_exists/g' ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
+
       # Use package path while unpacking
       find . -iname "*.sh" -exec sed 's#/opt/bitnami#${{targets.contextdir}}/opt/bitnami#g' -i {} \;
-        ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
+      find . -iname "*.sh" -exec sed 's#/BITNAMI_VOLUME_DIR="/bitnami"#BITNAMI_VOLUME_DIR="${{targets.contextdir}}/bitnami"#g' -i {} \;
+      find . -iname "*.sh" -exec sed 's#"/bitnami/clickhouse"#"${{targets.contextdir}}/bitnami/clickhouse"#g' -i {} \;
+      ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
       # Restore path
       find ${{targets.contextdir}}/opt/bitnami -type f -exec sed 's#${{targets.contextdir}}##g' -i {} \;
 
