fix: compat package wip

--- a/clickhouse-25.2-bitnami-compat.yaml
+++ b/clickhouse-25.2-bitnami-compat.yaml
@@ -1,6 +1,6 @@
 package:
-  name: clickhouse-25.1-bitnami-compat
-  version: "25.1.6.34"
+  name: clickhouse-25.2-bitnami-compat
+  version: "25.2.1.3085"
   epoch: 0
   description: Clickhouse 
   copyright:
@@ -10,16 +10,17 @@ package:
     memory: 32Gi
   dependencies:
     runtime: 
-      - clickhouse-25.1
+      - clickhouse-25.2
 
 environment:
   contents:
     packages:
-      - clickhouse-25.1
+      - clickhouse-25.2
       - busybox
       - bash
       - shadow
       - findutils
+      - xmlstarlet
 
 pipeline:
   - uses: bitnami/compat
@@ -30,9 +31,7 @@ pipeline:
       set -x
       mkdir -p ${{targets.contextdir}}/bitnami/clickhouse/data/tmp
       mkdir -p ${{targets.contextdir}}/bitnami/clickhouse/etc
-      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse
       mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default
-      mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc
       mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.d
       mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/conf.d
       mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.d
@@ -53,11 +52,13 @@ pipeline:
       ln -s /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.xml
 
       # Disable some commands used in Bitnami scripts. These commands more likely fail in this since this image take non root approach
-      sed -i 's/owned_by "$dir" "$owner_user" "$owner_group"/return/g' ${{targets.contextdir}}/opt/bitnami/scripts/libfs.sh
+      sed -i 's/owned_by "$dir" "$owner_user" "$owner_group"/continue/g' ${{targets.contextdir}}/opt/bitnami/scripts/libfs.sh
       sed -i 's/ensure_user_exists/# ensure_user_exists/g' ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
+
 
       # Use package path while unpacking
       find . -iname "*.sh" -exec sed 's#/opt/bitnami#${{targets.contextdir}}/opt/bitnami#g' -i {} \;
+      find . -iname "*.sh" -exec sed -i '/chown/c\continue'  -i {} \;
       find . -iname "*.sh" -exec sed 's#/BITNAMI_VOLUME_DIR="/bitnami"#BITNAMI_VOLUME_DIR="${{targets.contextdir}}/bitnami"#g' -i {} \;
       find . -iname "*.sh" -exec sed 's#"/bitnami/clickhouse"#"${{targets.contextdir}}/bitnami/clickhouse"#g' -i {} \;
       ${{targets.contextdir}}/opt/bitnami/scripts/clickhouse/postunpack.sh
@@ -69,19 +70,19 @@ pipeline:
       for file in /usr/bin/*; do
           if [ -f "$file" ] && [ "$(basename "$file")" = "clickhouse" ]; then
               # Found a direct match for "clickhouse"
-              ln -sf /usr/bin/clickhouse ${{targets.contextdir}}/opt/bitnami/bin/clickhouse
+              ln -sf /usr/bin/clickhouse ${{targets.contextdir}}/opt/bitnami/clickhouse/bin/clickhouse
           elif [ -L "$file" ]; then
               # Check if the symlink points to clickhouse
               target=$(readlink -f "$file")
               if [ "$(basename "$target")" = "clickhouse" ]; then
                   link_name=$(basename "$file")
-                  ln -sf /usr/bin/clickhouse "${{targets.contextdir}}/opt/bitnami/bin/$link_name"
+                  ln -sf /usr/bin/clickhouse "${{targets.contextdir}}/opt/bitnami/clickhouse/bin/$link_name"
               fi
           fi
       done
 
-      ln -s /usr/bin/clickhouse-library-bridge ${{targets.contextdir}}/opt/bitnami/bin/clickhouse-library-bridge
-      ln -s /usr/bin/clickhouse-odbc-bridge ${{targets.contextdir}}/opt/bitnami/bin/clickhouse-odbc-bridge
+      ln -s /usr/bin/clickhouse-library-bridge ${{targets.contextdir}}/opt/bitnami/clickhouse/bin/clickhouse-library-bridge
+      ln -s /usr/bin/clickhouse-odbc-bridge ${{targets.contextdir}}/opt/bitnami/clickhouse/bin/clickhouse-odbc-bridge
 
 
 
