fix: compat package

--- a/clickhouse-25.2-bitnami-compat.yaml
+++ b/clickhouse-25.2-bitnami-compat.yaml
@@ -11,6 +11,8 @@ package:
   dependencies:
     runtime: 
       - clickhouse-25.2
+      - bash # added for entrypoint script
+      - coreutils
 
 environment:
   contents:
@@ -29,8 +31,8 @@ pipeline:
       version-path: 25/debian-12
   - runs: |
       set -x
-      mkdir -p ${{targets.contextdir}}/bitnami/clickhouse/data/tmp
       mkdir -p ${{targets.contextdir}}/bitnami/clickhouse/etc
+      mkdir -p ${{targets.contextdir}}/bitnami/clickhouse/data
       mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default
       mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.d
       mkdir -p ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/conf.d
@@ -43,13 +45,17 @@ pipeline:
       mkdir ${{targets.contextdir}}/docker-entrypoint-initdb.d
       mkdir ${{targets.contextdir}}/docker-entrypoint-startdb.d
       
-      # ln -s /opt/bitnami/clickhouse/tmp ${{targets.contextdir}}/bitnami/clickhouse/data/tmp
+      ln -s /opt/bitnami/clickhouse/tmp ${{targets.contextdir}}/bitnami/clickhouse/data/tmp
       # ln -s /dev/stdout ${{targets.contextdir}}/opt/bitnami/clickhouse/logs/clickhouse.log
       # ln -s /dev/stderr ${{targets.contextdir}}/opt/bitnami/clickhouse/logs/clickhouse_error.log 
 
-      ln -s /etc/clickhouse-keeper/keeper-config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/keeper-config.xml
+      ln -s /etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/keeper_config.xml
       ln -s /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/users.xml
       ln -s /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc/config.xml
+
+      ln -s /etc/clickhouse-keeper/keeper_config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/keeper_config.xml
+      ln -s /etc/clickhouse-server/users.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/users.xml
+      ln -s /etc/clickhouse-server/config.xml ${{targets.contextdir}}/opt/bitnami/clickhouse/etc.default/config.xml
 
       # Disable some commands used in Bitnami scripts. These commands more likely fail in this since this image take non root approach
       sed -i 's/owned_by "$dir" "$owner_user" "$owner_group"/continue/g' ${{targets.contextdir}}/opt/bitnami/scripts/libfs.sh
