Set CAP_SYS_ADMIN
Test to see if failure on `Test file capabilities` needs this for setcap/getcap

Signed-off-by: Pris Nasrat <pris.nasrat@chainguard.dev>

--- a/python-3.12.yaml
+++ b/python-3.12.yaml
@@ -15,6 +15,10 @@ package:
     runtime:
       - ${{package.name}}-base=${{package.full-version}}
 
+capabilities:
+  add:
+    - CAP_SYS_ADMIN
+
 environment:
   contents:
     packages:
